tradition tablet styles and fix mobile modal

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -23,7 +23,7 @@
 
 .hero__box {
   width: 277px;
-  z-index: 3;
+  z-index: 1;
   position: relative;
 }
 
